# material-color-palette

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-package-uv.yml
extras/: palette_image.py
src/material_2014_colors/: __init__.py
src/material_color_palette/: __init__.py  main.py
tests/: test_.py
